add endpoint for admin register